objects/sf4twitter__Fcbk_User__c.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Facebook_Image__c</fullName>
        <formula>HYPERLINK( &apos;http://www.facebook.com/profile.php?id=&apos; + SUBSTITUTE( sf4twitter__Fcbk_Id__c, &apos;FB_&apos;, &apos;&apos; )  ,
IF( sf4twitter__Image__c  &lt;&gt;null, IMAGE( sf4twitter__Image__c , &quot;&quot;), null )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Facebook Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when Account has been Validated and acces granted to the App.</description>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__about_me__c</fullName>
        <description>The user&apos;s biography</description>
        <label>About Me</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__birthday__c</fullName>
        <description>The user&apos;s birthday</description>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf4twitter__city__c</fullName>
        <description>The user&apos;s city</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__country__c</fullName>
        <description>The user&apos;s country</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__email__c</fullName>
        <description>The proxied or contact email address granted by the user</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sf4twitter__first_name__c</fullName>
        <description>The user&apos;s first name</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__last_name__c</fullName>
        <description>The user&apos;s last name</description>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__political__c</fullName>
        <description>The user&apos;s political view</description>
        <label>Political</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__religion__c</fullName>
        <description>The user&apos;s religion</description>
        <label>Religion</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__sex__c</fullName>
        <label>Sex</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__state__c</fullName>
        <description>The user&apos;s state</description>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Facebook User</label>
    <listViews>
        <fullName>sf4twitter__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facebook Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>